# origin

07_Lesson01/Task01/: Task01.cpp  Task01.sln  Task01.vcxproj
07_Lesson01/Task02/: Task02.cpp  Task02.sln  Task02.vcxproj
07_Lesson01/Task03/: Task03.cpp  Task03.sln  Task03.vcxproj
07_Lesson02/Task02/: Task02.cpp  Task02.sln  Task02.vcxproj
07_Lesson03/Task01/: Task01.cpp  Task01.sln  Task01.vcxproj
07_Lesson03/Task02/: Task02.cpp  Task02.sln  Task02.vcxproj
07_Lesson04/Task01/: Task01.cpp  Task01.sln  Task01.vcxproj
07_Lesson04/Task02/: Task02.cpp  Task02.sln  Task02.vcxproj
07_Lesson05/Task01/: Task01.cpp  Task01.sln  Task01.vcxproj
07_Lesson05/Task02/: Task02.cpp  Task02.sln  Task02.vcxproj
07_Lesson05/Task3/: Task3.cpp  Task3.sln  Task3.vcxproj
07_Lesson06/Task01/: Task01.cpp  Task01.sln  Task01.vcxproj
07_Lesson06/Task02/: Task02.cpp  Task02.sln  Task02.vcxproj
07_Lesson07/Task01/: Task01.cpp  Task01.sln  Task01.vcxproj
07_Lesson07/Task02/: Task02.cpp  Task02.sln  Task02.vcxproj
07_Lesson08/Task01/: Task01.cpp  Task01.sln  Task01.vcxproj
07_Lesson08/Task02/: Task02.sln  Task02.vcxproj
07_Lesson09/Task01/: Task01.cpp  Task01.sln  Task01.vcxproj
07_Lesson09/Task02/: Task02.cpp  Task02.sln  Task02.vcxproj
11_Lesson02/Task/: CMakeLists.txt  main.cpp
Lesson10/The project is more complicated/: CMakeLists.txt  EquilateralTriangle.h  Figure.cpp  Figure.h  IsoscelesTriangle.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  RectangleC.h  Rhomb.cpp  Rhomb.h  Square.cpp  Square.h  hierarchy.cpp
Lesson11/Task03/: CMakeLists.txt  Greeter.cpp  Greeter.h  Leaver.cpp  Leaver.h  Task03.cpp
(+275 files in other folders)
